--- a/src/components/welcome/styles.css
+++ b/src/components/welcome/styles.css
@@ -1,8 +1,37 @@
+body {
+    margin: 0;
+    background: #222;
+}
+
 .container {
     position: absolute;
-    top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    top: 30%;
     font-family: sans-serif;
+    transform: translate(-50%, -50%);
+    color: white;
+    max-width: 550px;
+    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+        0px 18px 23px rgba(0, 0, 0, 0.1);
+    h1 {
+        font-size: 3em;
+    }
+    p {
+        font-size: 1.2em;
+        text-align: justify;
+
+        span {
+            padding-top: 15px;
+            display: block;
+            text-align: right;
+        }
+    }
+}
+
+.space {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
 }
